Microservice/deploy-management-server/template_man/app/base_templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: #
  namespace: #
spec:
  selector:
    app: #
  ports:
    - protocol: 
      port: #
      targetPort: #
