Microservice/deploy-management-server/template_man/app/base_templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: #
  namespace: #
spec:
  parentRefs:
  - name: gateway
    namespace: istio-ingress
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: #
    backendRefs:
    - name: #
      port: #
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
